--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,18 +54,20 @@ h1 {
 	/*background-color: #60A561;*/
 }
 
-h1:after {
+.bar:after {
 	content: "";
 	display: block;
 	width: inherit;
 	height: 5px;
 	background-color: #3E151F;
 	margin-bottom: 5px; 
+	margin-top: 15px; 
 }
 
 h2 {
 	text-transform: uppercase;
 	color: white;
+
 }
 
 .projects h2 {
@@ -74,11 +76,13 @@ h2 {
 	margin-bottom: 15px;
 }
 
-.box > p {
-	font-size: 1rem;
-	margin-top: 5px;
-	color: #3E151F;
+.about h2 {
+/*	width: 30%;
+	text-align: center;
+	border: 1px solid black;
+	background-color: yellow;*/
 }
+
 
 
 
@@ -105,13 +109,28 @@ nav {
 	border-radius: 50%;
 }
 
+.logo-container i {
+	font-size: 6em;
+	color: white;
+	margin-top: 70%;
+
+}
+
+.logo-container h1 {
+	color: white;
+	font-size: 1.6em;
+	margin-top: 10px;
+}
+
 .logo-container {
 	width: 140px;
 	margin:20px auto;
+	text-align: center;
 }
 
 nav ul {
 	margin-top: 30px;
+
 }
 
 nav > ul > li  {
@@ -209,6 +228,13 @@ main {
 
 }
 
+.box > p {
+	font-size: 1rem;
+	margin-top: 15px;
+	color: #3E151F;
+}
+
+
 /* /////////// end banner ////////// */
 
 
@@ -220,11 +246,59 @@ main {
 	min-height: 100vh;
 }
 
+.right {
+	float: right;
+}
+
+.left {
+	float: left;
+}
+
+.right img {
+	max-width: 30%;
+}
+
+/*.about > .left {
+	width: 59%;
+	float: left;
+
+}
+
+.text-content {
+   position: absolute; 
+   z-index: 100;
+   width: inherit;
+   padding: 30px;
+   transform: translate(20px, 50px);
+}*/
+
+/*.about > .right {
+	width: 40%;
+	float: right;
+}*/
+
+/*.about .right {
+	float: right;
+	max-width: 40%;
+	border: 3px solid #3E151F;
+	
+	transform: translate(-60px,30px);
+	background-color: yellow;
+}
+
+.about .right img {
+	display: block;
+	transform: translate(-15px,15px);
+	z-index: 99;
+	opacity: 0.5;
+
+	}*/
+
 
  /*======= SERVICES =======*/
 .services {
 	background-color: midnightblue;
-	min-height: 300px;
+	min-height: 100vh;
 }
 
 
@@ -243,7 +317,7 @@ img[alt*="service"] ~ p {
  /*======= PROJECTS =======*/
 .projects {
 	background-color: #3E151F;
-	min-height: 60vh;
+	min-height: 100vh;
 		position: relative;
 
 /*	background: url(../images/bg-projects.jpg) center center no-repeat;
