--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@
 
 
  .column {
- 	border: 1px solid black;
+ 	/*border: 1px solid black;*/
  	width: 31%;
  	margin-left: 1.16%;
  	margin-right: : 1.16%;
@@ -64,10 +64,25 @@ h1 {
 	margin-top: 15px; 
 }
 
+.bar2:after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 5px;
+	background-color: #3E151F;
+	margin-bottom: 5px; 
+	margin-top: 5px; 
+
+}
+
 h2 {
 	text-transform: uppercase;
 	color: white;
 
+}
+
+p {
+	color: #f2f2f2;
 }
 
 .projects h2 {
@@ -76,11 +91,25 @@ h2 {
 	margin-bottom: 15px;
 }
 
+.projects p {
+	color: #3E151F;
+}
+
 .about h2 {
-/*	width: 30%;
+	color: #ECA72C;
+}
+
+.gallery h2, .gallery p {
+	color: #3E151F;
+}
+
+.gallery h2 {
+	font-size: 3em;
+}
+
+.gallery h3 {
 	text-align: center;
-	border: 1px solid black;
-	background-color: yellow;*/
+	/*background-color: #3E151F;*/
 }
 
 
@@ -98,6 +127,8 @@ nav {
 	height: 100%;
 	width: 200px;
 	position: fixed;
+
+
 }
 
 
@@ -107,12 +138,14 @@ nav {
 	/*background-color: darkgray;*/
 	margin: 0 auto;
 	border-radius: 50%;
+
 }
 
 .logo-container i {
 	font-size: 6em;
 	color: white;
 	margin-top: 70%;
+
 
 }
 
@@ -242,11 +275,12 @@ main {
  /*======= ABOUT =======*/
 
 .about {
-	background-color: indianred;
+	background-color: #3E151F;
 	min-height: 100vh;
+	padding-top: 9%
 }
 
-.right {
+/*.right {
 	float: right;
 }
 
@@ -257,9 +291,9 @@ main {
 .right img {
 	max-width: 30%;
 }
-
-/*.about > .left {
-	width: 59%;
+*/
+.about > .left {
+	width: 55%;
 	float: left;
 
 }
@@ -269,30 +303,49 @@ main {
    z-index: 100;
    width: inherit;
    padding: 30px;
-   transform: translate(20px, 50px);
-}*/
+   transform: translate(20px, 160px);
+}
 
 /*.about > .right {
 	width: 40%;
 	float: right;
 }*/
 
-/*.about .right {
+.about .right {
 	float: right;
-	max-width: 40%;
-	border: 3px solid #3E151F;
+	max-width: 50%;
+	border: 3px solid #f2f2f2;
 	
 	transform: translate(-60px,30px);
-	background-color: yellow;
+	/*background-color: yellow;*/
 }
 
 .about .right img {
 	display: block;
 	transform: translate(-15px,15px);
 	z-index: 99;
-	opacity: 0.5;
+}
 
-	}*/
+.about span {
+	background-color: #3E151F;
+	line-height: 25px;
+}
+
+.about p:after {
+	content: "";
+	display: block;
+	width: 59%;
+	height: 3px;
+	background-color: #f2f2f2;
+	margin-top:1.6em;
+}
+
+.about h2 {
+	/*float: left;*/
+	position: absolute;
+	font-size: 5em;
+	transform: translate(50px,80px);
+}
 
 
  /*======= SERVICES =======*/
@@ -358,22 +411,50 @@ img[alt*="service"] ~ p {
 
  /*======= GALLERY =======*/
 .gallery {
-	background-color: orange;
+	background-color: #f2f2f2;
 	min-height: 100vh;
+	padding: initial 4%;
 }
+
+
 
 .gallery > .column {
 	width:23%;
 	margin-left: 1%;
 	margin-right: 1%;
+	margin-top: 20px;
+
+	border: 3px solid #3E151F;
+	border-radius: 20px 0 20px 0;
+}
+
+.img-caption {
+	padding: 10px;
+	transition: 
+}
+
+.img-holder {
+	background-color: #D6ADB6;
+	transform: translate(-10px,10px);
+	border-radius: 20px 0 20px 0;
 }
 
 img[alt*="gallery"] {
-	max-width: 100%;
-	height: 100px;
+	width: 100%;
+	height: 150px;
 	display: block;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 	margin: 0 auto;
+	border-radius: 20px 0 0 0;
+}
+
+.gallery h2 {
+	/*border: 1px solid black;*/
+	width: 100%;
+	text-align: center;
+	/*background-color: #3E151F;*/
+	margin: 0 auto 5% auto;
+
 }
 
 
