--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,7 +443,7 @@ font-family: 'IBM Plex Sans', sans-serif;*/
 	width:23%;
 	margin-left: 1%;
 	margin-right: 1%;
- 	border: 5px solid #3E151F;
+ 	border: 5px solid #3A0812;
 	 background-color: #3A0812;
 	 border-radius: 20px 0 20px 0;
  }
@@ -518,7 +518,7 @@ img[alt*="gallery"] {
  .services h2 {
  	/*float: left;*/
  	position: absolute;
- 	transform: translate(50px, 80px);
+ 	transform: translate(50px, 50px);
  	z-index: 100;
  }
 
@@ -545,13 +545,16 @@ img[alt*="service"]~p {
 } */
  .form-content {
  	/* float: left; */
- 	position: absolute;
- 	z-index: 100;
  	width: 45%;
  	padding: 30px;
- 	transform: translate(20px, 160px);
+ 	transform: translate(20px, 130px);
  }
 
+
+.form-content > * {
+	position: absolute;
+	z-index: 100;
+}
 
  .form-container form * {
  	display: block;
@@ -650,7 +653,7 @@ img[alt*="service"]~p {
 /*Tablets Styles*/
 @media only screen and (max-width: 960px) {
 	nav {
-		visibility: hidden;
+		display: none;
 	}
 
 	main {
@@ -689,6 +692,7 @@ img[alt*="service"]~p {
 
 	.about h2 {
 		font-size: 3em;
+		transform: translate(35px, 80px);
 	}
 
 	.about p {
@@ -700,18 +704,41 @@ img[alt*="service"]~p {
 	}
 
 	.text-content {
-		padding: 10px;
+		padding: 0px;
+		transform: translate(35px, 160px);
+		position: relative;
 	}
 
 	.services h2 {
 		font-size: 3em;
-		transform: translate(0px, 0px)
+		transform: translate(0px, 0px);
+		position: relative;	
 	}
 
 	.services .form-content {
 		padding: 10px;
 		width: 90%;
 		transform: translate(0px, 0px)
+	}
+
+	.gallery h2 {
+		font-size: 3em;
+		margin-bottom: 20px;
+	}
+
+	.gallery .column2 {
+		float: none;
+		width: 80%;
+		margin: 0 auto;
+		margin-bottom: 20px;
+	}
+
+	.form-container {
+		position: static;
+		width: 90%;
+		float: none;
+		padding: 0;
+		margin: 0 auto;
 	}
 }
 
@@ -722,7 +749,7 @@ img[alt*="service"]~p {
 		font-size: 2.3rem;
 	}
 
-	.banner p {
+	.banner p { 
 		font-size: 0.9rem;
 	}
 
